# wt-cli

./: .env  .env.example  .gitignore  Cargo.toml  readme.md  todo.md
config/: aliases.toml  exmaple.toml
src/: cli.rs  main.rs
