[package]
name = "wt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
toml = "0.9"
dirs = "*"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
